<resources>
    <string name="app_name">Chather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_sign_in">Sign In </string>
    <string name="button_register">Register </string>
    <string name="email">Email </string>
    <string name="password">Password </string>
    <string name="success">Success </string>
    <string name="title_home">Home</string>
    <string name="title_chats">Chats</string>
    <string name="title_connections">Connections</string>
    <string name="action_send_chat">Send</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="button_dark_mode">Dark Mode</string>
    <string name="button_light_mode">Light Mode</string>
    <string name="switch_color_mode">Switch Mode</string>
    <string name="hello_weather_fragment">It is sunny somewhere :D</string>
    <string name="title_weather">Weather</string>
    <string name="text_chat_hint">Message</string>
    <string name="button_message">Message</string>
    <string name="button_details">Details</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>

    <!-- Setting -->
    <string name="button_change_password">Change Password</string>
    <string name="button_change_theme">Change Theme</string>
    <string name="button_sign_out">Sign Out</string>

    <!-- Change Theme -->
    <string name="title_changeTheme">Change Theme</string>
    <string name="button_changeTheme_blue">Blue Theme</string>
    <string name="button_changeTheme_dark">Dark Theme</string>
    <string name="button_changeTheme_green">Green Theme</string>
    <string name="button_changeTheme_pink">Pink Theme</string>
    <string name="button_changeTheme_purple">Purple Theme</string>

    <!-- Change Password -->
    <string name="title_changePassword">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm Password</string>
    <string name="change_password">Change Password</string>

    <!-- JWT auto sign in and sign out -->
    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="base_url">https://tcss450-android-app.herokuapp.com/</string>

    <string name="contacts_add">Add</string>
    <string name="contacts_add_hint">Enter a username or email address.</string>
    <string name="title_contact">Contacts</string>
    <string name="title_add_contact">Add Contact</string>
    <string name="title_add_contact_page">Add A Contact</string>
    <string name="button_new_chat">New Chat</string>
    <string name="title_new_chat">New Chat</string>
    <string name="text_chat_new">Enter username to add to chat</string>

    <!-- Map related strings -->
    <string name="label_location">Current location:</string>
    <string name="title_activity_maps">Map</string>
    <string name="Change_Style">Change Style</string>

    <string name="contact_add_title">Search for a Contact</string>
    <string name="contact_request_title">Contact Requests</string>

</resources>