<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add_contact_white"
        android:title="@string/contacts_add"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigate_contact_request"
        android:icon="@drawable/ic_contact_notif"
        android:title="@string/contacts_add"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigate_change_theme"
        android:orderInCategory="200"
        android:title="@string/button_change_theme"
        app:showAsAction="never" />


    <item
        android:id="@+id/navigate_change_password"
        android:orderInCategory="300"
        android:title="@string/button_change_password"
        app:showAsAction="never" />

    <item
        android:id="@+id/navigate_sign_out"
        android:orderInCategory="300"
        android:title="@string/button_sign_out"
        app:showAsAction="never" />

</menu>