<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigate_changetheme_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.changeTheme.ChangeThemeFragment">

    <TextView
        android:id="@+id/pick_color_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:text="Select your Color Theme:"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/groupradio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pick_color_theme">


        <RadioButton
            android:id="@+id/blue_theme_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_changeTheme_blue"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/green_theme_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_changeTheme_green"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/pink_theme_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_changeTheme_pink"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/purple_theme_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_changeTheme_purple"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/dark_theme_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_changeTheme_dark"
            android:textSize="20dp" />
    </RadioGroup>

    <!-- add clear button for clear the selected item-->

</androidx.constraintlayout.widget.ConstraintLayout>